# VixenEngine

./: .gitignore  CMakeLists.txt  main.cpp
contrib/assimp/code/: Version.cpp  revision.h
contrib/assimp/include/assimp/: revision.h
engine/: CMakeLists.txt  Camera.cpp  Camera.h  Character.h  Chunk.h  Cube.h  Entity.h  EntityRender.cpp  EntityRender.h  Font.cpp  Font.h  FontRender.cpp  FontRender.h  Generator.cpp  Generator.h  GuiShader.cpp  GuiShader.h  Light.cpp  Loader.cpp  Loader.h  MasterRender.cpp  MasterRender.h  Material.h  Mesh.cpp  Model.h  Phong.cpp  Phong.h  Player.cpp  Player.h  Shader.cpp  Shader.h  TerrainRender.h  Text.h  Window.cpp  Window.h
engine/contrib/assimp/: CMakeLists.txt
engine/contrib/glew/: glew.pc
engine/contrib/glfw/: CMakeLists.txt
engine/font/: Character.h  Font.h  Text.h
engine/render/: EntityRender.cpp  EntityRender.h  FontRender.cpp  FontRender.h  MasterRender.cpp  MasterRender.h  TerrainRender.cpp  TerrainRender.h
engine/shaders/: Phong.h  Shader.h
graphics/: Window.h
include/freetype/config/: ftoption.h
input/: Camera.h
resources/models/: missing.dae
resources/models/cube/: cube.blend  cube.blend1  cube.dae
resources/models/tree/: tree.dae
resources/shaders/: gui.frag  gui.vert  phong.frag  phong.vert
src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Entity.cpp  Entity.h  EntityRender.cpp  EntityRender.h  Generator.cpp  Generator.h  GuiShader.cpp  GuiShader.h  Image.h  Light.cpp  Light.h  Loader.cpp  Loader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Phong.cpp  Phong.h  Player.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  TerrainRender.h  Texture.h  Window.cpp  Window.h  main.cpp  phong.frag  phong.vert
src/font/: Character.cpp  Character.h  Font.cpp  Font.h  FontType.cpp  FontType.h  GuiText.cpp  GuiText.h  Line.cpp  Line.h  MetaFile.cpp  MetaFile.h  Text.cpp  Text.h  TextMeshCreator.cpp  TextMeshCreator.h  TextMeshData.cpp  TextMeshData.h  Word.cpp  Word.h
src/graphics/: Window.h
src/graphics/loader/: Loader.cpp  Loader.h
src/graphics/model/: Entity.cpp  Entity.h  EntityRender.h  Mesh.cpp
src/graphics/render/: EntityRender.h
src/graphics/shaders/: Shader.h
src/graphics/shaders/phong/: Phong.h  phong.frag  phong.vert
src/input/: Camera.cpp
src/render/: EntityRender.cpp  EntityRender.h  FontRender.cpp  FontRender.h  MasterRender.cpp  MasterRender.h  Render.cpp  Render.h  TerrainRender.cpp  TerrainRender.h
src/resources/: cube.dae  tree.dae
src/resources/shaders/: phong.frag  phong.vert
src/shaders/: GuiShader.cpp  GuiShader.h  Phong.cpp  Phong.h  Shader.cpp  Shader.h
src/shapes/: Cube.h  Shapes.h
test/: CMakeLists.txt  main.cpp
