cmake_minimum_required(VERSION 2.8)
project(VixenEngine)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if (WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++ -static-libgcc")
endif ()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_SHARED_MODULE_PREFIX "")
set(CMAKE_STATIC_LIBRARY_PREFIX "")

set(SKIP_INSTALL_ALL ON)

option(VIXEN_BUILD_ENGINE "Build the engine" ON)
option(VIXEN_BUILD_TEST "Build the engine test executable" ON)

#---- BUILD ENGINE ----

if (VIXEN_BUILD_ENGINE)
    add_subdirectory(${CMAKE_SOURCE_DIR}/engine)
endif(VIXEN_BUILD_ENGINE)

#---- BUILD TEST ----

if (VIXEN_BUILD_TEST)
    add_subdirectory(${CMAKE_SOURCE_DIR}/test)
endif(VIXEN_BUILD_TEST)